--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@langchain/google-genai": "^0.0.10",
     "@langchain/groq": "^0.2.2",
     "@langchain/openai": "^0.5.7",
+    "langchain": "^0.1.25",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
